  a yield is the local variable state dropped).
- added an error check for attempts to pack odd length hex strings
- parser now throws an error if a jar file specified with import * from: is not
  found.
- added a &setField(class|$object, "field", value) function for setting the 
  value of a field in a Java class or object.

2.1-beta 5  (17 Sept 06)
===========
- fixed a bug with import [path] from: [jar] not working when a package.class
  combination was specified.
- fixed a bug where HOES was not recognizing sleep arrays as a valid argument
  for methods/constructs expecting multidimensional arrays.
- HOES mapping scalars to Java arguments is now a little bit stricter and more 
  accurate.
- added &casti(value, "t") to cast the specified value into a Java primitive type.
- altered the semtantics for how Java Object values are converted to Sleep
  scalar number values.  Essentially the Object is converted to a string and the
  string is parsed with the following meaning:
  <not a number> = 0
  "true"         = 1
  "false"        = 0
  ""             = 0
  <a number>     = <a number>

  The old semantics (object hashcode) were worthless so I doubt there will be 
  many complaints.
- added checksumming capability to sleep, the function has the following forms:

  $summer   = checksum($handle, "[[>]CRC32"|"[>]Adler32");
  $sumvalue = checksum($summer); # when I/O on $handle is complete
  or:
  $sumvalue = checksum("string of data", ["CRC32"|"Adler32"])

  The CRC32 and Adler32 algorithms are supported.  With an I/O handle specifying
  a > before the algorithm name indicates that written data should be checksummed.
- added digest capability to sleep, the function is similar to checksum except
  the function name is &digest.  The MD5 and SHA-1 algorithms are supported.
  This function returns a string of bytes (can be converted to hex using 
  unpack("H*", $digest_data)[0]).
- added H/h to the binary format templates to allow byte data to be converted