@@ -1,2 +1,46 @@
-Error: jar file to import package from was not found! at line 5
-       import org.hick.blah.SqueezeBox from: tests/data/test.jar
+Pre change:
+static members:
+aStringField 'this is a string field' and aDoubleField = 3.0
+instance members:
+instanceStringField 'this is also a string field' instanceBooleanField = true
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'this is also a string field' instanceBooleanField = true
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'this is also a string field' instanceBooleanField = true
+------------------------------------------------------------
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 1' instanceBooleanField = true
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 2' instanceBooleanField = true
+------------------------------------------------------------
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 1' instanceBooleanField = false
+static members:
+aStringField 'this is a string field' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 2' instanceBooleanField = true
+------------------------------------------------------------
+static members:
+aStringField 'the rain in spain, falls mainly on the plain' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 1' instanceBooleanField = false
+static members:
+aStringField 'the rain in spain, falls mainly on the plain' and aDoubleField = 4.0
+instance members:
+instanceStringField 'squeeze box 2' instanceBooleanField = true
+------------------------------------------------------------
+Warning: no field named nofield in class org.hick.blah.SqueezeBox at line 39
+Warning: unable to convert 'false and true?' to a boolean at line 43
+34
+56
+Done?
